# C43-project

./: .gitignore  README.md  install_nltk.py  pyproject.toml
mybnb/: app.py  consts.py  db.py  host_toolkit.py  reports.py  sanitize.py  user.py
mybnb/tables/: __init__.py  booking_slots.py  bookings.py  listing_comments.py  listings.py  user.py  user_comments.py  users.py
mybnb/templates/: become-a-host.html  become-a-renter.html  dashboard.html  host-rate.html  index.html  listing-create.html  listing-edit.html  listing-schedule-add-slots.html  listing-schedule-slot-info.html  listing-schedule-slot-set-price.html  listing-schedule-slot.html  listing-schedule.html  listings.html  log-in.html  my-listings.html  my-profile.html  my-rentals.html  rental-rate.html  renter-rate.html  reports.html  sign-up.html
mybnb/templates/layouts/: form.html  main.html
sql/: create.sql  drop.sql  init.sql  populate.sql
