[tool.poetry]
name = "mybnb"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
mysql-connector-python = "^8.1.0"
flask-wtf = "^1.1.1"
bootstrap-flask = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
